--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-README file for nauty 2.2.
+README file for nauty 2.4 
 
 Brendan McKay, bdm@cs.anu.edu.au
 
@@ -14,6 +14,9 @@ in the distribution package.
 Note that nauty is copyright but free to use for most purposes.
 The details are in the file nauty.h.
 
+The code in the file planarity.c (used by the planarg program)
+is copyright to the Magma project. 
+
 ------------------------------------------------------------
 
 INSTALLATION.
@@ -21,11 +24,11 @@ INSTALLATION.
 The first step is to unpack the archive.  On Unix-ish systems
 you can use one of these commands:
 
-   tar xfz nauty22.tar.gz
+   tar xfz nauty24b3.tar.gz
 or
-   gunzip -c nauty22.tar.gz | tar xf -
+   gunzip -c nauty24b3.tar.gz | tar xf -
 
-This will write all the files into the subdirectory nauty22.
+This will write all the files into the subdirectory nauty24b3.
 Go to that directory.
 
 If you have a working shell, and make, you can run
@@ -34,11 +37,8 @@ followed by
    make all
 to compile nauty for your system.
 
-If that succeeds without problem, you will have two versions of
-dreadnaut:
-
-dreadnaut  : graphs up to 32765 vertices
-dreadnautB : graphs limited only by your available RAM
+If that succeeds without problem, you will have have the
+program dreadnaut ready to run.
 
 If you have problems during compilation, it may be that the
 configuration scripts are inadequate for your system.  Usually it
@@ -50,11 +50,17 @@ naututil.h and gtools.h as distributed.  The parts between the lines
 ======= near the start are the main things to look at.  After this
 manual editing, you can use makefile as a guide to compilation.
 
-Programs which use an older version of nauty need to be recompiled
-(** not just relinked **).  Make sure they use the DEFAULTOPTIONS
-macro to define the fields of the options parameter.
+Programs which use an older version of nauty need to be
+recompiled (** not just relinked **). Make sure they use the
+DEFAULTOPTIONS_GRAPH or DEFAULTOPTIONS_SPARSEGRAPH macro to define
+the fields of the options parameter.
 
 See below for compiling on a PC under DJGPP.
+
+If you are using Windows in an environment that needs Windows line
+endings (which is a configuration option in Cygwin, for example),
+then you might prefer to use nauty24b3.zip rather than
+nauty24b3.tar.gz.
 
 ------------------------------------------------------------
 
@@ -70,7 +76,7 @@ MAILING LIST.
 
 There is a mailing list for announcements and discussion about
 nauty and related topics.  You can subscribe at
-http://cs.anu.edu.au/mailman/listinfo/nauty-list .
+http://dcsmail.anu.edu.au/cgi-bin/mailman/listinfo/nauty-list
 
 ------------------------------------------------------------
 
@@ -136,9 +142,6 @@ Nov 17, 2003: Renamed INFINITY to NAUTY_INFINITY since many C header
               libraries define INFINITY.  If INFINITY is not defined by
               the system, you can still use it.
 
-29-May-04 : - added definition of SETWORD_FORMAT used to write a setword
-              with printf( ) - see nauty.h
-
 Nov 19, 2003: Added program biplabg to relabel bipartite graphs with the
               colour classes contiguous.
 
@@ -147,7 +150,10 @@ Feb 13, 2004: Revised C options for solaris on pentium
 Mar 1, 2004:  dretog knows !...\n type of comment
 
 May 7, 2004:  geng can be called from another program (see instructions
-              in geng.c.
+              in geng.c.)
+
+May 29, 2004: added definition of SETWORD_FORMAT used to write a setword
+              with printf( ) - see nauty.h
 
 Sep 11, 2004: Added utility multig for making multigraphs based on
               provided simple graphs; similar to directg
@@ -179,3 +185,90 @@ May 5, 2005:  A bug in the writing of sparse6 was found and fixed.
               Usage: checks6 [-w] [infile [outfile]]
               Check a file of graphs, optionally write corrected version
               -w  Write corrected graphs (default is not to write)
+
+------now we start version 2.3 (not released) and 2.4------
+
+Nov 10, 2004: Use faster routine getc_unlocked() for reading graphs if
+              available.  It can make a surprising difference.
+
+Nov 17, 2004: If putenv() or setenv() are available, we set LC_COLLATE to
+              "C" before executing "sort" in shortg.  This should alleviate
+	      collation issues with sort.  However, note that many
+              utilities use the locale these days so you are advised to
+	      have LC_COLLATE defined to be "C" always when you are dealing
+              with files of graphs.
+
+              Six counters in statsblk became "unsigned long" instead of
+              "long".  nauty doesn't actually use these, but we might as
+              well give them twice as long before they overflow.
+
+Nov 24, 2004: Made geng faster for generating trees.  The output labelling
+              may be different from before.  A very much faster tree
+              generator is in the works.
+
+Jan 17, 2005: Added two items to dispatch vectors:
+               init   : used for initialising something at the start
+              cleanup : used for doing something at the end, such as
+                        freeing space allocated by init()
+              See the manual for calling sequences.
+
+May 20, 2005: Update graph6 and sparse6 formats to allow much large sizes.
+              The limit is now 68719476735 vertices (best of luck getting
+              close to that!).
+
+Nov 12, 2005: Changed NAUTY_INFINITY to 2^30+2 in BIGNAUTY case
+
+2006 various: Procedures for sparse graphs implemented.
+
+              New program planarg to test for planarity and find
+              planar embeddings:   planarg -help  for details.
+	      The planarity code was written by Paulette Lieby for the
+              Magma project and used with permission.
+
+	      labelg got -S to use sparse graphs.
+              genbg -N changed to genbg -n (only Gordon uses this).
+              genrang gained -R switch for regular graphs in text format.
+              gtools.c has code for reading and writing planarcode.
+              listg got a compile time option to select "Matrix" or
+                 "array" for Maple output.
+              pickg/countg got -T for counting triangles
+
+	      Better configuration for MacOSX.
+
+Nov 22, 2006: Removed usertcellproc from options.  Greater functionality
+              is now available using the new targetcell field in the
+              dispatch vector.  The u8 command has gone from dreadnaut.
+
+              Changed bestcell to targetcell in dispatch vector.
+
+Nov 29, 2006: Added extraoptions field (currently unused) to optionblk
+
+Dec 9, 2006:  Added an invariant adjacencies_sg(), recommended for digraphs
+              when using sparse representation.
+
+Dec 10, 2006: Remove BIGNAUTY, whose usefulness has passed.  Now the types
+	      shortish and permutation are synonymous with int always.
+              The limit on the number of vertices is 2^30 unless int
+              has only 16 bits (still any of them around?) in which
+              case it is 2^15-3. Programs previously linked with
+              files like nautyB.o can now be linked with nauty.o.
+              Alternatively, "make bigs" will create files like
+              nautyB.o by copying.
+
+June 26, 2007:  Fixed an error in  listg -s  reported by Evan Heidtmann.
+
+July 12, 2007:  Added -f option to directg.
+
+Aug 14, 2007:  Added -i,-I,-K options to shortg, parallel to labelg.
+              Since -k is used in labelg in place of -I, changed labelg
+              to use -I also, with -k remaining as an undocumented
+              compatibility feature.
+
+Aug-Sep 2007: Minor things:
+              * naututil-h.in now defines CPUTIME=0.0 as a last resort
+              * gtools.c now implements EDGECODE (not used anywhere yet)
+              * fixed definition of SG_FREE in nausparse.h (not used)
+              * geng favours space over time for n > 28 
+
+Oct 14, 2007: Added -T switch to shortg to specify scratch directory.
+
