--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 nauty (2.4~b7-1) unstable; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release (Closes: #529094)  <nnnn is the bug number of your ITP>
 
  -- David Bremner <bremner@unb.ca>  Sun, 17 May 2009 08:56:48 -0300
 
