fix hyphens in man pages

--- a/debian/NRswitchg.1
+++ b/debian/NRswitchg.1
@@ -3,7 +3,7 @@
 NRswitchg \- For each v, complement the edges from N(v) to V(G)\-N(v)\-v.
 .SH SYNOPSIS
 .B NRswitchg
-[\fI-lq\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-lq\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 For each v, complement the edges from N(v) to V(G)\-N(v)\-v.
