--- a/debian/amtog.1
+++ b/debian/amtog.1
@@ -3,7 +3,7 @@
 amtog \- Read graphs in matrix format.
 .SH SYNOPSIS
 .B amtog
-[\fI-n#sghq\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-n#sghq\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Read graphs in matrix format.
