--- a/debian/catg.1
+++ b/debian/catg.1
@@ -3,7 +3,7 @@
 catg \- Copy files to stdout with all but the first header removed.
 .SH SYNOPSIS
 .B catg
-[\fI-xv\fR] [\fIinfile\fR]...
+[\fI\-xv\fR] [\fIinfile\fR]...
 .SH DESCRIPTION
 .IP
 Copy files to stdout with all but the first header removed.
