--- a/debian/complg.1
+++ b/debian/complg.1
@@ -3,7 +3,7 @@
 complg \- Take the complements of a file of graphs.
 .SH SYNOPSIS
 .B complg
-[\fI-lrq\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-lrq\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Take the complements of a file of graphs.
