--- a/debian/copyg.1
+++ b/debian/copyg.1
@@ -3,7 +3,7 @@
 copyg \- Copy a file of graphs with possible format conversion.
 .SH SYNOPSIS
 .B copyg
-[\fI-gsfp#:#qhx\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-gsfp#:#qhx\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Copy a file of graphs with possible format conversion.
