--- a/debian/deledgeg.1
+++ b/debian/deledgeg.1
@@ -3,7 +3,7 @@
 deledgeg \- For each edge e, output G\-e
 .SH SYNOPSIS
 .B deledgeg
-[\fI-lq\fR] [\fI-d#\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-lq\fR] [\fI\-d#\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 For each edge e, output G\-e
