--- a/debian/directg.1
+++ b/debian/directg.1
@@ -3,7 +3,7 @@
 directg \- Read undirected graphs and orient their edges in all possible ways.
 .SH SYNOPSIS
 .B directg
-[\fI-q\fR] [\fI-u|-T|-G\fR] [\fI-o\fR] [\fI-f#\fR] [\fI-e#|-e#:#\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-q\fR] [\fI\-u|\-T|\-G\fR] [\fI\-o\fR] [\fI\-f#\fR] [\fI\-e#|\-e#:#\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Read undirected graphs and orient their edges in all possible ways.
