--- a/debian/dretog.1
+++ b/debian/dretog.1
@@ -3,7 +3,7 @@
 dretog \- Read graphs in dreadnaut format.
 .SH SYNOPSIS
 .B dretog
-[\fI-n#o#sghq\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-n#o#sghq\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Read graphs in dreadnaut format.
