--- a/debian/genbg.1
+++ b/debian/genbg.1
@@ -3,7 +3,7 @@
 genbg \- [mine[:maxe]] [res/mod] [file]
 .SH SYNOPSIS
 .B genbg
-[\fI-c -ugsn -vq -lzF\fR] [\fI-Z#\fR] [\fI-d#|-d#:#\fR] [\fI-D#|-D#:#\fR] \fIn1 n2\fR
+[\fI\-c \-ugsn \-vq \-lzF\fR] [\fI\-Z#\fR] [\fI\-d#|\-d#:#\fR] [\fI\-D#|\-D#:#\fR] \fIn1 n2\fR
 .SH DESCRIPTION
 .IP
 [mine[:maxe]] [res/mod] [file]
