--- a/debian/geng.1
+++ b/debian/geng.1
@@ -3,7 +3,7 @@
 geng \- [\-x#X#] n [mine[:maxe]] [res/mod] [file]
 .SH SYNOPSIS
 .B geng
-[\fI-cCmtfbd#D#\fR] [\fI-uygsnh\fR] [\fI-lvq\fR]
+[\fI\-cCmtfbd#D#\fR] [\fI\-uygsnh\fR] [\fI\-lvq\fR]
 .SH DESCRIPTION
 .IP
 [\-x#X#] n [mine[:maxe]] [res/mod] [file]
