--- a/debian/genrang.1
+++ b/debian/genrang.1
@@ -3,7 +3,7 @@
 genrang \- Generate random graphs.
 .SH SYNOPSIS
 .B genrang
-[\fI-P#|-P#/#|-e#|-r#|-R#\fR] [\fI-a\fR] [\fI-s|-g\fR] [\fI-S#\fR] [\fI-q\fR] \fIn num \fR[\fIoutfile\fR]
+[\fI\-P#|\-P#/#|\-e#|\-r#|\-R#\fR] [\fI\-a\fR] [\fI\-s|\-g\fR] [\fI\-S#\fR] [\fI\-q\fR] \fIn num \fR[\fIoutfile\fR]
 .SH DESCRIPTION
 .IP
 Generate random graphs.
