--- a/debian/labelg.1
+++ b/debian/labelg.1
@@ -3,7 +3,7 @@
 labelg \- Canonically label a file of graphs.
 .SH SYNOPSIS
 .B labelg
-[\fI-qsg\fR] [\fI-fxxx\fR] [\fI-S\fR] [\fI-i# -I#:# -K#\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-qsg\fR] [\fI\-fxxx\fR] [\fI\-S\fR] [\fI\-i# \-I#:# \-K#\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Canonically label a file of graphs.
