--- a/debian/listg.1
+++ b/debian/listg.1
@@ -3,7 +3,7 @@
 listg \- Write graphs in human\-readable format.
 .SH SYNOPSIS
 .B listg
-[\fI-fp#:#l#o#Ftq\fR] [\fI-a|-A|-c|-d|-e|-M|-s\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-fp#:#l#o#Ftq\fR] [\fI\-a|\-A|\-c|\-d|\-e|\-M|\-s\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Write graphs in human\-readable format.
