--- a/debian/multig.1
+++ b/debian/multig.1
@@ -3,7 +3,7 @@
 multig \- Read undirected loop\-free graphs and replace their edges with multiple
 .SH SYNOPSIS
 .B multig
-[\fI-q\fR] [\fI-u|-T|-G|-A|-B\fR] [\fI-e#|-e#:#\fR] [\fI-m#\fR] [\fI-f#\fR] [\fI-D#|-r#|-l#\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-q\fR] [\fI\-u|\-T|\-G|\-A|\-B\fR] [\fI\-e#|\-e#:#\fR] [\fI\-m#\fR] [\fI\-f#\fR] [\fI\-D#|\-r#|\-l#\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Read undirected loop\-free graphs and replace their edges with multiple
