--- a/debian/newedgeg.1
+++ b/debian/newedgeg.1
@@ -3,7 +3,7 @@
 newedgeg \- For each pair of non\-adjacent edges, output the graph obtained
 .SH SYNOPSIS
 .B newedgeg
-[\fI-lq\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-lq\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 For each pair of non\-adjacent edges, output the graph obtained
