--- a/debian/pickg.1
+++ b/debian/pickg.1
@@ -3,7 +3,7 @@
 pickg \- countg : Count graphs according to their properties.
 .SH SYNOPSIS
 .B [pickg|countg]
-[\fI-fp#:#q -V\fR] [\fI--keys\fR] [\fI-constraints -v\fR] [\fIifile \fR[\fIofile\fR]]
+[\fI\-fp#:#q \-V\fR] [\fI\--keys\fR] [\fI\-constraints \-v\fR] [\fIifile \fR[\fIofile\fR]]
 .SH DESCRIPTION
 .IP
 countg : Count graphs according to their properties.
