--- a/debian/planarg.1
+++ b/debian/planarg.1
@@ -3,7 +3,7 @@
 planarg \- For each input, write to output if planar.
 .SH SYNOPSIS
 .B planarg
-[\fI-v\fR] [\fI-nVq\fR] [\fI-p|-u\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-v\fR] [\fI\-nVq\fR] [\fI\-p|\-u\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 For each input, write to output if planar.
