--- a/debian/shortg.1
+++ b/debian/shortg.1
@@ -3,7 +3,7 @@
 shortg \- Remove isomorphs from a file of graphs.
 .SH SYNOPSIS
 .B shortg
-[\fI-qvkdu\fR] [\fI-i# -I#:# -K#\fR] [\fI-fxxx\fR] [\fI-Tdir\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-qvkdu\fR] [\fI\-i# \-I#:# \-K#\fR] [\fI\-fxxx\fR] [\fI\-Tdir\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Remove isomorphs from a file of graphs.
