--- a/debian/showg.1
+++ b/debian/showg.1
@@ -3,7 +3,7 @@
 showg \- Write graphs in human\-readable format.
 .SH SYNOPSIS
 .B showg
-[\fI-p#:#l#o#Ftq\fR] [\fI-a|-A|-c|-d|-e\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-p#:#l#o#Ftq\fR] [\fI\-a|\-A|\-c|\-d|\-e\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Write graphs in human\-readable format.
