--- a/debian/addedgeg.1
+++ b/debian/addedgeg.1
@@ -4,7 +4,7 @@
 addedgeg \- For each edge e, output G\-e
 .SH SYNOPSIS
 .B addedgeg
-[\fI-lq\fR] [\fI-D#\fR] [\fI-btfF\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-lq\fR] [\fI\-D#\fR] [\fI\-btfF\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 For each edge e, output G\-e
