--- a/debian/biplabg.1
+++ b/debian/biplabg.1
@@ -3,7 +3,7 @@
 biplabg \- Label bipartite graphs so that the colour classes are contiguous.
 .SH SYNOPSIS
 .B biplabg
-[\fI-q\fR] [\fIinfile \fR[\fIoutfile\fR]]
+[\fI\-q\fR] [\fIinfile \fR[\fIoutfile\fR]]
 .SH DESCRIPTION
 .IP
 Label bipartite graphs so that the colour classes are contiguous.
