--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nauty (2.4~b7-2) unstable; urgency=low
+
+  * add missing libnauty.so symlink to libnauty-dev
+
+ -- David Bremner <bremner@unb.ca>  Sun, 13 Sep 2009 09:16:02 -0300
+
 nauty (2.4~b7-1) unstable; urgency=low
 
   * Initial release (Closes: #529094)
