--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 nauty (2.4~b7-2) unstable; urgency=low
 
-  * add missing libnauty.so symlink to libnauty-dev
+  * Fix amd64 FTBFS of packages depending on libnauty-dev
+    - add missing libnauty.so symlink to libnauty-dev
+    - add dependency on libnauty0d to libnauty-dev
 
- -- David Bremner <bremner@unb.ca>  Sun, 13 Sep 2009 09:16:02 -0300
+ -- David Bremner <bremner@unb.ca>  Sun, 13 Sep 2009 11:54:11 -0300
 
 nauty (2.4~b7-1) unstable; urgency=low
 
