--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nauty (2.4r2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- David Bremner <bremner@debian.org>  Tue, 13 Mar 2012 23:02:17 -0300
+
 nauty (2.4-2) unstable; urgency=low
 
   * Fix depends of libnauty-dev to libnauty1d. Thanks to Jan Hauke Rahm
