man page typo fixes from A. Costa
Closes: #650472

--- a/debian/amtog.1
+++ b/debian/amtog.1
@@ -43,7 +43,7 @@ Upper triangle of matrix to follow, row by row
 excluding the diagonal. (01 in any or no spacing)
 .TP
 T
-Complement of upper trangle to follow (as t)
+Complement of upper triangle to follow (as t)
 .TP
 q
 exit (optional)
