--- a/debian/countg.1
+++ b/debian/countg.1
@@ -79,7 +79,7 @@ Sort keys:
 Counts are made for all graphs passing the constraints.
 Counts
 .IP
-are given separately for each combination of values occuring for
+are given separately for each combination of values occurring for
 the properties listed as sort keys.  A sort key is introduced by
 \&'\-\-' and uses one of the letters known as constraints.  These can
 be combined:  \fB\-\-n\fR \fB\-\-e\fR  \fB\-\-r\fR  is the same as \fB\-\-ne\fR \fB\-\-r\fR and \fB\-\-ner\fR.
