--- a/debian/genbg.1
+++ b/debian/genbg.1
@@ -22,7 +22,7 @@ mine:maxe : a range for the number of edges
 .IP
 res/mod : only generate subset res out of subsets 0..mod\-1
 .IP
-file : the name of the output file (defailt stdout)
+file : the name of the output file (default stdout)
 .TP
 \fB\-c\fR
 : only write connected graphs
